# ml-tracker

./: .gitignore  README.md  pyproject.toml
src/mltracker/: __init__.py
src/mltracker/configs/: __init__.py  base.py  classification.py  factory.py  yolo.py
src/mltracker/runtime/: __init__.py  env.py  system_tags.py
src/mltracker/trackers/: __init__.py  base.py  classification.py  factory.py  yolo.py
tests/: conftest.py  test_artifacts.py  test_configs.py  test_trackers.py  test_uri_resolution.py
