[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltracker"
version = "0.2.0"
description = "Internal MLflow tracking SDK with enforced configs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ML Platform Team" }
]
dependencies = [
  "mlflow>=2.12.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mltracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
